Quadro GPUs: Blender 2.83 will not open #77657

Closed
opened 2020-06-09 02:33:17 +02:00 by Dave Rank · 18 comments

System Information
Operating system: Win 10 Pro
CPU: i7, 64-bit, 8 core
RAM: 16 GB
Display: 1600 x 1200
Input: mouse, keyboard, 3D Connexion 3D mouse, Wacom Cintiq
GPU: nVidia Quadro FX4800, 5+ GB RAM, OpenGL 3.3

Blender Version
Broken: 2.83 LTS, download 8 June 2020
Worked: 2.82a. Has been working fine.

Short description of error

  1. Installed 2.83
  2. Tried to start from desktop shortcut and double-clicking .exe.
  3. Command Prompt window briefly opens. Application frame opens for a couple seconds, then disappears.
  4. Tried rebooting and repeating. Same result.
  5. Checked minimum requirements and pass

Other info: Installed on newer Surface Pro 2. Launched and loaded normally. However, though this machine is older, it still meets minimum specs found here: https://www.blender.org/download/requirements/.

relavant bit from crash.txt
blender.crash.txt

GPU_draw_list_command_add
draw_call_batching_flush
draw_shgroup
DRW_draw_pass
OVERLAY_draw_scene
drw_engines_draw_scene
DRW_draw_render_loop_ex
DRW_draw_view
view3d_main_region_draw
ED_region_do_draw
wm_draw_window_offscreen
wm_draw_window
wm_draw_update
ghost_event_proc
GHOST_CallbackEventConsumer::processEvent
GHOST_EventManager::dispatchEvent
GHOST_EventManager::dispatchEvents
GHOST_System::dispatchEvents
wm_window_process_events
WM_main
main
__scrt_common_main_seh
BaseThreadInitThunk
RtlUserThreadStart
**System Information** Operating system: Win 10 Pro CPU: i7, 64-bit, 8 core RAM: 16 GB Display: 1600 x 1200 Input: mouse, keyboard, 3D Connexion 3D mouse, Wacom Cintiq GPU: nVidia Quadro FX4800, 5+ GB RAM, OpenGL 3.3 **Blender Version** Broken: 2.83 LTS, download 8 June 2020 Worked: 2.82a. Has been working fine. **Short description of error** 1. Installed 2.83 2. Tried to start from desktop shortcut and double-clicking .exe. 3. Command Prompt window briefly opens. Application frame opens for a couple seconds, then disappears. 4. Tried rebooting and repeating. Same result. 5. Checked minimum requirements and pass Other info: Installed on newer Surface Pro 2. Launched and loaded normally. However, though this machine is older, it still meets minimum specs found here: https://www.blender.org/download/requirements/. relavant bit from crash.txt [blender.crash.txt](https://archive.blender.org/developer/F8606014/blender.crash.txt) ``` GPU_draw_list_command_add draw_call_batching_flush draw_shgroup DRW_draw_pass OVERLAY_draw_scene drw_engines_draw_scene DRW_draw_render_loop_ex DRW_draw_view view3d_main_region_draw ED_region_do_draw wm_draw_window_offscreen wm_draw_window wm_draw_update ghost_event_proc GHOST_CallbackEventConsumer::processEvent GHOST_EventManager::dispatchEvent GHOST_EventManager::dispatchEvents GHOST_System::dispatchEvents wm_window_process_events WM_main main __scrt_common_main_seh BaseThreadInitThunk RtlUserThreadStart ```
Author

Added subscriber: @rccDave

Added subscriber: @rccDave

#77579 was marked as duplicate of this issue

#77579 was marked as duplicate of this issue

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Make sure that you have the latest driver installed for your GPU. Please download Blender 2.90 from here , open Blender's installation directory and double click on the blender_debug_gpu.cmd. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you two files. Add them to your bug report by clicking on the upload button as shown in the screenshot below.

2019_12_04_upload_icon_developer_blender_org.png

Make sure that you have the latest driver installed for your GPU. Please download Blender 2.90 from [here ](https://builder.blender.org/download/), open Blender's installation directory and double click on the `blender_debug_gpu.cmd`. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you two files. Add them to your bug report by clicking on the upload button as shown in the screenshot below. ![2019_12_04_upload_icon_developer_blender_org.png](https://archive.blender.org/developer/F8190038/2019_12_04_upload_icon_developer_blender_org.png)
Author

Robert: Thank you.
The drivers are the newest nVidia has for that card, so yes, they are up-to-date.
The two debug files are attached.
I noticed 2.83 also had that gpu debug cmd script. I take it you wanted me to run 2.9 alpha because it's newer?

blender_system_info.txt

blender_debug_output.txt

Robert: Thank you. The drivers are the newest nVidia has for that card, so yes, they are up-to-date. The two debug files are attached. I noticed 2.83 also had that gpu debug cmd script. I take it you wanted me to run 2.9 alpha because it's newer? [blender_system_info.txt](https://archive.blender.org/developer/F8603860/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F8603859/blender_debug_output.txt)

@rccDave Blender 2.90 includes a feature that gives us a proper stack trace to identify the issue.

@rccDave Blender 2.90 includes a feature that gives us a proper stack trace to identify the issue.
Author

I see. Thanks. Hopefully those two files give you what you need to find the issue.

I see. Thanks. Hopefully those two files give you what you need to find the issue.
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

@rccDave please upload this file too
C:\Users\Dave\AppData\Local\Temp\blender.crash.txt

@rccDave please upload this file too C:\Users\Dave\AppData\Local\Temp\blender.crash.txt
Author

Here you go.

blender.crash.txt

Here you go. [blender.crash.txt](https://archive.blender.org/developer/F8606014/blender.crash.txt)
Ankit Meel changed title from Blender 2.83 will not load to Quadro GPUs: Blender 2.83 will not open 2020-06-10 16:21:48 +02:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscribers: @Haldronara, @Na5her

Added subscribers: @Haldronara, @Na5her
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Full stack trace:

ucrtbased.dll!00007ff8f1917c75() (Unknown Source:0)
ucrtbased.dll!00007ff8f1917e13() (Unknown Source:0)
ucrtbased.dll!00007ff8f192e01d() (Unknown Source:0)
blender.exe!GPU_draw_list_command_add(GPUDrawList * list, int v_first, int v_count, int i_first, int i_count) Line 895 (c:\blender-git\blender\source\blender\gpu\intern\gpu_batch.c:895)
blender.exe!draw_indirect_call(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 728 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:728)
blender.exe!draw_call_batching_flush(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 975 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:975)
blender.exe!draw_call_batching_finish(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 1081 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1081)
blender.exe!draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) Line 1249 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1249)
blender.exe!drw_draw_pass_ex(DRWPass * pass, DRWShadingGroup * start_group, DRWShadingGroup * end_group) Line 1305 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1305)
blender.exe!DRW_draw_pass(DRWPass * pass) Line 1345 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1345)
blender.exe!OVERLAY_grid_draw(OVERLAY_Data * vedata) Line 225 (c:\blender-git\blender\source\blender\draw\engines\overlay\overlay_grid.c:225)
blender.exe!OVERLAY_draw_scene(void * vedata) Line 496 (c:\blender-git\blender\source\blender\draw\engines\overlay\overlay_engine.c:496)
blender.exe!drw_engines_draw_scene() Line 1047 (c:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1047)
blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1514 (c:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1514)
blender.exe!DRW_draw_view(const bContext * C) Line 1397 (c:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1397)
blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1609 (c:\blender-git\blender\source\blender\editors\space_view3d\view3d_draw.c:1609)
blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1634 (c:\blender-git\blender\source\blender\editors\space_view3d\view3d_draw.c:1634)
blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 543 (c:\blender-git\blender\source\blender\editors\screen\area.c:543)
blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 689 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:689)
blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 812 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:812)
blender.exe!wm_draw_update(bContext * C) Line 1013 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:1013)
blender.exe!ghost_event_proc(GHOST_EventHandle__ * evt, void * C_void_ptr) Line 1431 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_window.c:1431)
blender.exe!GHOST_CallbackEventConsumer::processEvent(GHOST_IEvent * event) Line 41 (c:\blender-git\blender\intern\ghost\intern\GHOST_CallbackEventConsumer.cpp:41)
blender.exe!GHOST_EventManager::dispatchEvent(GHOST_IEvent * event) Line 86 (c:\blender-git\blender\intern\ghost\intern\GHOST_EventManager.cpp:86)
blender.exe!GHOST_EventManager::dispatchEvent() Line 96 (c:\blender-git\blender\intern\ghost\intern\GHOST_EventManager.cpp:96)
blender.exe!GHOST_EventManager::dispatchEvents() Line 102 (c:\blender-git\blender\intern\ghost\intern\GHOST_EventManager.cpp:102)
blender.exe!GHOST_System::dispatchEvents() Line 221 (c:\blender-git\blender\intern\ghost\intern\GHOST_System.cpp:221)
blender.exe!GHOST_DispatchEvents(GHOST_SystemHandle__ * systemhandle) Line 277 (c:\blender-git\blender\intern\ghost\intern\GHOST_C-api.cpp:277)
blender.exe!wm_window_process_events(const bContext * C) Line 1636 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_window.c:1636)
blender.exe!WM_main(bContext * C) Line 475 (c:\blender-git\blender\source\blender\windowmanager\intern\wm.c:475)
blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530 (c:\blender-git\blender\source\creator\creator.c:530)
blender.exe!invoke_main() Line 79 (d:\agent\_work\5\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79)
blender.exe!__scrt_common_main_seh() Line 288 (d:\agent\_work\5\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288)
blender.exe!__scrt_common_main() Line 331 (d:\agent\_work\5\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331)
blender.exe!mainCRTStartup() Line 17 (d:\agent\_work\5\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17)
kernel32.dll!00007ff904a67bd4() (Unknown Source:0)
ntdll.dll!00007ff906a0ce51() (Unknown Source:0)

fails on

void GPU_draw_list_command_add(
    GPUDrawList *list, int v_first, int v_count, int i_first, int i_count)
{
  BLI_assert(list->commands);

list->commands is NULL.

issue is that USE_MULTI_DRAW_INDIRECT evaluates to false. Perhaps this is a codepath that needs more testing as it should have initialized this. Seems to be a blender issue, not a driver issue so would be fixable.

When forcing USE_MULTI_DRAW_INDIRECT to 0 Blender starts. Does this means that the card say it does support it, but out logic does not cover all requirements?

list->commands = glMapBufferRange errors with GL_INVALID_ENUM
We use GL_DRAW_INDIRECT_BUFFER which isn't supported by opengl 3

My solution would be to add a check for opengl4

Full stack trace: ``` ucrtbased.dll!00007ff8f1917c75() (Unknown Source:0) ucrtbased.dll!00007ff8f1917e13() (Unknown Source:0) ucrtbased.dll!00007ff8f192e01d() (Unknown Source:0) blender.exe!GPU_draw_list_command_add(GPUDrawList * list, int v_first, int v_count, int i_first, int i_count) Line 895 (c:\blender-git\blender\source\blender\gpu\intern\gpu_batch.c:895) blender.exe!draw_indirect_call(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 728 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:728) blender.exe!draw_call_batching_flush(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 975 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:975) blender.exe!draw_call_batching_finish(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 1081 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1081) blender.exe!draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) Line 1249 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1249) blender.exe!drw_draw_pass_ex(DRWPass * pass, DRWShadingGroup * start_group, DRWShadingGroup * end_group) Line 1305 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1305) blender.exe!DRW_draw_pass(DRWPass * pass) Line 1345 (c:\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1345) blender.exe!OVERLAY_grid_draw(OVERLAY_Data * vedata) Line 225 (c:\blender-git\blender\source\blender\draw\engines\overlay\overlay_grid.c:225) blender.exe!OVERLAY_draw_scene(void * vedata) Line 496 (c:\blender-git\blender\source\blender\draw\engines\overlay\overlay_engine.c:496) blender.exe!drw_engines_draw_scene() Line 1047 (c:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1047) blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1514 (c:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1514) blender.exe!DRW_draw_view(const bContext * C) Line 1397 (c:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1397) blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1609 (c:\blender-git\blender\source\blender\editors\space_view3d\view3d_draw.c:1609) blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1634 (c:\blender-git\blender\source\blender\editors\space_view3d\view3d_draw.c:1634) blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 543 (c:\blender-git\blender\source\blender\editors\screen\area.c:543) blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 689 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:689) blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 812 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:812) blender.exe!wm_draw_update(bContext * C) Line 1013 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:1013) blender.exe!ghost_event_proc(GHOST_EventHandle__ * evt, void * C_void_ptr) Line 1431 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_window.c:1431) blender.exe!GHOST_CallbackEventConsumer::processEvent(GHOST_IEvent * event) Line 41 (c:\blender-git\blender\intern\ghost\intern\GHOST_CallbackEventConsumer.cpp:41) blender.exe!GHOST_EventManager::dispatchEvent(GHOST_IEvent * event) Line 86 (c:\blender-git\blender\intern\ghost\intern\GHOST_EventManager.cpp:86) blender.exe!GHOST_EventManager::dispatchEvent() Line 96 (c:\blender-git\blender\intern\ghost\intern\GHOST_EventManager.cpp:96) blender.exe!GHOST_EventManager::dispatchEvents() Line 102 (c:\blender-git\blender\intern\ghost\intern\GHOST_EventManager.cpp:102) blender.exe!GHOST_System::dispatchEvents() Line 221 (c:\blender-git\blender\intern\ghost\intern\GHOST_System.cpp:221) blender.exe!GHOST_DispatchEvents(GHOST_SystemHandle__ * systemhandle) Line 277 (c:\blender-git\blender\intern\ghost\intern\GHOST_C-api.cpp:277) blender.exe!wm_window_process_events(const bContext * C) Line 1636 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_window.c:1636) blender.exe!WM_main(bContext * C) Line 475 (c:\blender-git\blender\source\blender\windowmanager\intern\wm.c:475) blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530 (c:\blender-git\blender\source\creator\creator.c:530) blender.exe!invoke_main() Line 79 (d:\agent\_work\5\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79) blender.exe!__scrt_common_main_seh() Line 288 (d:\agent\_work\5\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288) blender.exe!__scrt_common_main() Line 331 (d:\agent\_work\5\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331) blender.exe!mainCRTStartup() Line 17 (d:\agent\_work\5\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17) kernel32.dll!00007ff904a67bd4() (Unknown Source:0) ntdll.dll!00007ff906a0ce51() (Unknown Source:0) ``` fails on ``` void GPU_draw_list_command_add( GPUDrawList *list, int v_first, int v_count, int i_first, int i_count) { BLI_assert(list->commands); ``` list->commands is NULL. issue is that `USE_MULTI_DRAW_INDIRECT` evaluates to false. Perhaps this is a codepath that needs more testing as it should have initialized this. Seems to be a blender issue, not a driver issue so would be fixable. When forcing USE_MULTI_DRAW_INDIRECT to 0 Blender starts. Does this means that the card say it does support it, but out logic does not cover all requirements? `list->commands = glMapBufferRange` errors with `GL_INVALID_ENUM` We use `GL_DRAW_INDIRECT_BUFFER` which isn't supported by opengl 3 My solution would be to add a check for opengl4

This issue was referenced by 37a07d8a75

This issue was referenced by 37a07d8a75d0f133e1d2458b698e82e3c53c3273

This issue was referenced by ed00b5def6

This issue was referenced by ed00b5def64c10a5a243399aeda383c30eb886ff
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jeroen Bakker self-assigned this 2020-06-11 15:36:05 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77657
No description provided.